--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Simon Says</title>
+    <title>Our Team</title>
 </head>
 
-<body>
+<body class="bg-light">
 
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div id="output"></div>
-                    
+        <div class="container p-5">
+            <div class="row px-5">
+                <div class="col-12 text-center pb-3">
+
+                    <h1 class="text-uppercase">team member</h1>
+                    <h5 class="text-uppercase">classe#55</h5>
+
                 </div>
             </div>
         </div>
-        
+
     </main>
 
     <script src="js/script.js"></script>
