--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body class="bg-light">
 
     <main>
-        <div class="container p-5">
-            <div class="row px-5">
-                <div class="col-12 text-center pb-3">
+        <div class="container container-lg-fluid">
+            <div class="row">
+                <div class="col-12 text-center py-5">
 
                     <h1 class="text-uppercase">team member</h1>
                     <h5 class="text-uppercase">classe#55</h5>
