added option add new member

--- a/index.html
+++ b/index.html
@@ -35,6 +35,30 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center px-5 pt-5 mt-3 mb-3">
+                    <h2 class="text-uppercase">Add a new Team Member</h2>
+                </div>
+                <div class="col-12 col-sm-10 col-md-8 col-lg-6 p-3">
+                    <form class="text-center">
+                        <div class="mb-3 text-start">
+                            <label for="new-member-name" class="form-label">Nome</label>
+                            <input type="email" class="form-control" id="new-member-name">
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label for="new-member-role" class="form-label">Ruolo</label>
+                            <input type="text" class="form-control" id="new-member-role">
+                        </div>
+                        <div class="mb-3 text-start">
+                            <label for="new-member-img" class="form-label">Link all'immagine</label>
+                            <input type="text" class="form-control" id="new-member-img">
+                        </div>
+                        <button type="button" class="btn btn-primary mb-5">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
     </main>
 
