--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-12 text-center px-5 pt-5 mt-3 mb-3">
                     <h2 class="text-uppercase">Add a new Team Member</h2>
                 </div>
-                <div class="col-12 col-sm-10 col-md-8 col-lg-6 p-3">
+                <div class="col-11 col-sm-9 col-md-7 col-lg-5  col-xl-4 p-3">
                     <form class="text-center">
                         <div class="mb-3 text-start">
                             <label for="new-member-name" class="form-label">Nome</label>
